services/ping-grpc/envoy.yaml
static_resources:
  listeners:
    - name: listener_1
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10001
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /dev/stdout
                route_config:
                  name: ping-grpc
                  virtual_hosts:
                    - name: ping-grpc
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/sp.rpc.PingService/"
                          route:
                            cluster: ping-grpc
                http_filters:
                  - name: envoy.router
  clusters:
    - name: ping-grpc
      connect_timeout: 2.00s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ping-grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ping-grpc
                      port_value: 10005
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
